<resources>
    <string name="app_name">TMDb</string>
    <string name="string_list_separator"> • </string>
    <string name="language_aa">Afar</string>
    <string name="language_ab">Abcázio</string>
    <string name="language_ae">Avéstico</string>
    <string name="language_af">Africânder</string>
    <string name="language_ak">Akan</string>
    <string name="language_am">Amárico</string>
    <string name="language_an">Aragonês</string>
    <string name="language_ar">Árabe</string>
    <string name="language_as">Assamês</string>
    <string name="language_av">Avárico</string>
    <string name="language_ay">Aimará</string>
    <string name="language_az">Azerbaijano</string>
    <string name="language_ba">Basquir</string>
    <string name="language_be">Bielorrusso</string>
    <string name="language_bg">Búlgaro</string>
    <string name="language_bh">Línguas Biaris</string>
    <string name="language_bi">Bislamá</string>
    <string name="language_bm">Bâmbara</string>
    <string name="language_bn">Bengali</string>
    <string name="language_bo">Tibetano</string>
    <string name="language_br">Bretão</string>
    <string name="language_bs">Bósnio</string>
    <string name="language_ca">Catalão</string>
    <string name="language_ce">Checheno</string>
    <string name="language_ch">Chamorro</string>
    <string name="language_co">Corso</string>
    <string name="language_cr">Cree</string>
    <string name="language_cs">Tcheco</string>
    <string name="language_cu">Eslavo Eclesiástico</string>
    <string name="language_cv">Tchuvache</string>
    <string name="language_cy">Galês</string>
    <string name="language_da">Dinamarquês</string>
    <string name="language_de">Alemão</string>
    <string name="language_dv">Maldívio</string>
    <string name="language_dz">Zoncá</string>
    <string name="language_ee">Jeje</string>
    <string name="language_el">Grego</string>
    <string name="language_en">Inglês</string>
    <string name="language_eo">Esperanto</string>
    <string name="language_es">Espanhol</string>
    <string name="language_et">Estoniano</string>
    <string name="language_eu">Basco</string>
    <string name="language_fa">Persa</string>
    <string name="language_ff">Fula</string>
    <string name="language_fi">Finlandês</string>
    <string name="language_fj">Fidjiano</string>
    <string name="language_fo">Feroês</string>
    <string name="language_fr">Francês</string>
    <string name="language_fy">Frisão Ocidental</string>
    <string name="language_ga">Irlandês</string>
    <string name="language_gd">Gaélico Escocês</string>
    <string name="language_gl">Galego</string>
    <string name="language_gn">Guarani</string>
    <string name="language_gu">Guzerate</string>
    <string name="language_gv">Manês</string>
    <string name="language_ha">Haussá</string>
    <string name="language_he">Hebraico</string>
    <string name="language_hi">Híndi</string>
    <string name="language_ho">Hiri Motu</string>
    <string name="language_hr">Croata</string>
    <string name="language_ht">Haitiano</string>
    <string name="language_hu">Húngaro</string>
    <string name="language_hy">Armênio</string>
    <string name="language_hz">Hereró</string>
    <string name="language_ia">Interlíngua</string>
    <string name="language_id">Indonésio</string>
    <string name="language_ie">Interlíngua</string>
    <string name="language_ig">Ibo</string>
    <string name="language_ii">Yi De Sichuan</string>
    <string name="language_ik">Inupiaq</string>
    <string name="language_io">Ido</string>
    <string name="language_is">Islandês</string>
    <string name="language_it">Italiano</string>
    <string name="language_iu">Inuktitut</string>
    <string name="language_ja">Japonês</string>
    <string name="language_jv">Javanês</string>
    <string name="language_ka">Georgiano</string>
    <string name="language_kg">Kongo</string>
    <string name="language_ki">Gikuyu</string>
    <string name="language_kj">Oshikwanyama</string>
    <string name="language_kk">Cazaque</string>
    <string name="language_kl">Groenlandês</string>
    <string name="language_km">Khmer</string>
    <string name="language_kn">Canarês</string>
    <string name="language_ko">Coreano</string>
    <string name="language_kr">Kanuri</string>
    <string name="language_ks">Caxemir</string>
    <string name="language_ku">Curdo</string>
    <string name="language_kv">Komi</string>
    <string name="language_kw">Córnico</string>
    <string name="language_ky">Quirguiz</string>
    <string name="language_la">Latim</string>
    <string name="language_lb">Luxemburguês</string>
    <string name="language_lg">Luganda</string>
    <string name="language_li">Limburguês</string>
    <string name="language_ln">Lingala</string>
    <string name="language_lo">Laociano</string>
    <string name="language_lt">Lituano</string>
    <string name="language_lu">Luba-Katanga</string>
    <string name="language_lv">Letão</string>
    <string name="language_mg">Malgaxe</string>
    <string name="language_mh">Marshallês</string>
    <string name="language_mi">Maori</string>
    <string name="language_mk">Macedônio</string>
    <string name="language_ml">Malaiala</string>
    <string name="language_mn">Mongol</string>
    <string name="language_mr">Marata</string>
    <string name="language_ms">Malaio</string>
    <string name="language_mt">Maltês</string>
    <string name="language_my">Burmês</string>
    <string name="language_na">Nauruano</string>
    <string name="language_nb">Bokmål Norueguês</string>
    <string name="language_nd">Ndebele Do Norte</string>
    <string name="language_ne">Nepalês</string>
    <string name="language_ng">Ndonga</string>
    <string name="language_nl">Holandês</string>
    <string name="language_nn">Novo Norueguês</string>
    <string name="language_no">Norueguês</string>
    <string name="language_nr">Ndebele Do Sul</string>
    <string name="language_nv">Navajo</string>
    <string name="language_ny">Nianja</string>
    <string name="language_oc">Occitano</string>
    <string name="language_oj">Chippewa</string>
    <string name="language_om">Oromo</string>
    <string name="language_or">Oriá</string>
    <string name="language_os">Oseto</string>
    <string name="language_pa">Panjabi</string>
    <string name="language_pi">Páli</string>
    <string name="language_pl">Polonês</string>
    <string name="language_ps">Afegão</string>
    <string name="language_pt">Português</string>
    <string name="language_qu">Quéchua</string>
    <string name="language_rm">Reto-Romano</string>
    <string name="language_rn">Rundi</string>
    <string name="language_ro">Romeno</string>
    <string name="language_ru">Russo</string>
    <string name="language_rw">Quiniaruanda</string>
    <string name="language_sa">Sânscrito</string>
    <string name="language_sc">Sardo</string>
    <string name="language_sd">Sindi</string>
    <string name="language_se">Sami Do Norte</string>
    <string name="language_sg">Sango</string>
    <string name="language_si">Cingalês</string>
    <string name="language_sk">Eslovaco</string>
    <string name="language_sl">Esloveno</string>
    <string name="language_sm">Samoano</string>
    <string name="language_sn">Chona</string>
    <string name="language_so">Somali</string>
    <string name="language_sq">Albanês</string>
    <string name="language_sr">Sérvio</string>
    <string name="language_ss">Suázi</string>
    <string name="language_st">Soto Do Sul</string>
    <string name="language_su">Sundanês</string>
    <string name="language_sv">Sueco</string>
    <string name="language_sw">Suaíli</string>
    <string name="language_ta">Tâmil</string>
    <string name="language_te">Telugu</string>
    <string name="language_tg">Tajique</string>
    <string name="language_th">Tailandês</string>
    <string name="language_ti">Tigrínia</string>
    <string name="language_tk">Turcomano</string>
    <string name="language_tl">Tagalo</string>
    <string name="language_tn">Tswana</string>
    <string name="language_to">Tonganês</string>
    <string name="language_tr">Turco</string>
    <string name="language_ts">Tsonga</string>
    <string name="language_tt">Tártaro</string>
    <string name="language_tw">Twi</string>
    <string name="language_ty">Taitiano</string>
    <string name="language_ug">Uigur</string>
    <string name="language_uk">Ucraniano</string>
    <string name="language_ur">Urdu</string>
    <string name="language_uz">Usbeque</string>
    <string name="language_ve">Venda</string>
    <string name="language_vi">Vietnamita</string>
    <string name="language_vo">Volapuque</string>
    <string name="language_wa">Valão</string>
    <string name="language_wo">Wolof</string>
    <string name="language_xh">Xhosa</string>
    <string name="language_yi">Iídiche</string>
    <string name="language_yo">Iorubá</string>
    <string name="language_za">Zhuang</string>
    <string name="language_zh">Chinês</string>
    <string name="language_zu">Zulu</string>
    <string name="movie_status_rumored">Rumores</string>
    <string name="movie_status_planned">Planejado</string>
    <string name="movie_status_in_production">Em produção</string>
    <string name="movie_status_post_production">Pós-produção</string>
    <string name="movie_status_released">Lançado</string>
    <string name="movie_status_canceled">Cancelado</string>
    <string name="tv_status_returning_series">Renovada</string>
    <string name="tv_status_ended">Finalizada</string>
    <string name="tv_type_scripted">Roteirizada</string>
    <string name="fragment_home_label_upcoming">Próximos Lançamentos</string>
    <string name="fragment_home_label_trending">Tendências</string>
    <string name="fragment_home_label_popular_movies">Filmes Populares</string>
    <string name="fragment_home_label_popular_tvs">Séries Populares</string>
    <string name="fragment_settings_label_username">Usuário</string>
    <string name="fragment_settings_label_password">Senha</string>
    <string name="fragment_settings_label_button_logout">Logout</string>
    <string name="fragment_settings_button_sign_in">Entrar</string>
    <string name="fragment_settings_message_sign_in_failed">"Login ou senha incorretos"</string>
    <string name="activity_main_nav_home">Home</string>
    <string name="activity_main_nav_watchlist">Minha lista</string>
    <string name="activity_main_nav_settings">Minha conta</string>
    <string name="activity_highlight_tab_similar">Assista Também</string>
    <string name="activity_highlight_tab_details">Detalhes</string>
    <string name="activity_highlight_description_movie_poster">Poster do filme</string>
    <string name="activity_highlight_label_overview">Sinopse</string>
    <string name="activity_highlight_value_vote_average">Avaliação %1$d%%</string>
    <string name="activity_highlight_value_money">$ %,.2f</string>
    <string name="activity_highlight_value_runtime">%1$dh %2$dmin</string>
    <string name="activity_highlight_label_cast">Elenco</string>
    <string name="activity_highlight_button_add_to_watchlist">Minha lista</string>
    <string name="activity_highlight_button_added_to_watchlist">Adicionado</string>
    <string name="activity_highlight_message_added_to_watchlist">"Filme adicionado à sua lista"</string>
    <string name="activity_highlight_message_removed_from_watchlist">Filme removido da sua lista</string>
    <string name="activity_highlight_tv_value_seasons_count_singular">%1$d temporadas</string>
    <string name="activity_highlight_tv_value_seasons_count_plural">%1$d temporadas</string>
    <string name="fragment_more_details_label_more_details">Ficha técinica</string>
    <string name="fragment_more_details_label_original_title">Título original</string>
    <string name="fragment_more_details_label_status">Status</string>
    <string name="fragment_more_details_label_budged">Orçamento</string>
    <string name="fragment_more_details_label_revenue">Receita</string>
</resources>