<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.highlight.movie.HighlightMovieActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.main.home.HomeFragment">

        <LinearLayout
            android:id="@+id/fragment_home_container_upcoming"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                style="@style/Widget.MyTheme.Home.Subtitle"
                android:text="@string/fragment_home_label_upcoming"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/fragment_home_upcoming"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:clipToPadding = "false"
                android:visibility="invisible" />

            <ProgressBar
                android:id="@+id/fragment_home_upcoming_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragment_home_container_trending"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/fragment_home_container_upcoming"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                style="@style/Widget.MyTheme.Home.Subtitle"
                android:text="@string/fragment_home_label_trending"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/fragment_home_trending"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:clipToPadding = "false"
                android:visibility="invisible" />

            <ProgressBar
                android:id="@+id/fragment_home_trending_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragment_home_container_popular_movies"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/fragment_home_container_trending"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                style="@style/Widget.MyTheme.Home.Subtitle"
                android:text="@string/fragment_home_label_popular_movies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/fragment_home_popular_movies"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:clipToPadding = "false"
                android:visibility="invisible" />

            <ProgressBar
                android:id="@+id/fragment_home_popular_movies_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragment_home_container_popular_tvs"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/fragment_home_container_popular_movies"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                style="@style/Widget.MyTheme.Home.Subtitle"
                android:text="@string/fragment_home_label_popular_tvs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/fragment_home_popular_tvs"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:clipToPadding = "false"
                android:visibility="invisible" />

            <ProgressBar
                android:id="@+id/fragment_home_popular_tvs_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp" />

        </LinearLayout>

    <!--    <androidx.recyclerview.widget.RecyclerView-->
    <!--        android:visibility="gone"-->
    <!--        android:id="@+id/genres_list"-->
    <!--        android:scrollbars="vertical"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/fragment_home_container_popular_movies"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>