<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.highlight.movie.HighlightMovieActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageView
            android:id="@+id/activity_highlight_movie_backdrop"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:contentDescription="@string/activity_highlight_description_movie_poster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/activity_highlight_movie_button_add_to_watchlist" />

        <View
            android:id="@+id/activity_highlight_movie_backdrop_gradient"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/shape_backdrop_gradient"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/activity_highlight_movie_button_add_to_watchlist" />

        <ImageView
            android:id="@+id/activity_highlight_movie_poster"
            android:layout_width="150dp"
            android:layout_height="225dp"
            android:layout_marginTop="48dp"
            android:contentDescription="@string/activity_highlight_description_movie_poster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/activity_highlight_movie_info_headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_highlight_movie_poster" >

            <TextView
                android:id="@+id/activity_highlight_movie_vote_avarege"
                style="@style/Widget.MyTheme.Highlight.VoteAverage"
                tools:text="Nota: 6,1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/Widget.MyTheme.Highlight.ListSeparator"
                android:text="@string/string_list_separator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/activity_highlight_movie_year"
                style="@style/Widget.MyTheme.Highlight.Year"
                tools:text="2020"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/Widget.MyTheme.Highlight.ListSeparator"
                android:text="@string/string_list_separator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/activity_highlight_movie_runtime"
                style="@style/Widget.MyTheme.Highlight.Runtime"
                tools:text="2h 21m"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/activity_highlight_movie_button_add_to_watchlist"
            style="@style/Widget.MyTheme.Button.Primary"
            app:icon="@drawable/ic_add_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_highlight_button_add_to_watchlist"
            android:layout_marginTop="16dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_highlight_movie_info_headline"/>

        <LinearLayout
            android:id="@+id/activity_highlight_movie_container_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            app:layout_constraintTop_toBottomOf="@+id/activity_highlight_movie_button_add_to_watchlist">

            <TextView
                android:id="@+id/activity_highlight_movie_label_overview"
                style="@style/Widget.MyTheme.Highlight.SubTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_highlight_label_overview" />

            <TextView
                android:id="@+id/activity_highlight_movie_overview"
                style="@style/Widget.MyTheme.Highlight.Body"
                tools:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. "
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <fragment
            android:id="@+id/activity_highlight_movie_cast"
            android:name="me.davidcosta.tmdb.ui.highlight.CastRailFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/activity_highlight_movie_container_overview" />

        <fragment
            android:id="@+id/activity_highlight_movie_more_details"
            android:name="me.davidcosta.tmdb.ui.highlight.MoreDetailsFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            app:layout_constraintTop_toBottomOf="@+id/activity_highlight_movie_cast" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>